Authentified alert API in SWAGGER
